# gecoder

./: .gitattributes  .gitignore  404-error.html  CHANGES  CNAME  COPYING  Gemfile  README  README.md  Rakefile  THANKS  TODO  features.html  index.html  installation.html  rspec.html  sitemap.html  sitemap.xml
coverage/: index.html  lib-gecoder-bindings_rb.html  lib-gecoder-interface-binding_changes_rb.html  lib-gecoder-interface-branch_rb.html  lib-gecoder-interface-constraints-bool-boolean_rb.html  lib-gecoder-interface-constraints-bool-channel_rb.html  lib-gecoder-interface-constraints-bool-linear_rb.html  (+52 more)
css/: webgen.css
details/: index.html  (+4 more)
ext/gecode-1.3.1/contribs/graph/: INSTALL  LICENSE  Makefile  Makefile.in.in  TODO  binarysimple.hh  binarysimple.icc  configure  configure.ac  doxygen.conf  doxygen.hh  graph.hh  graphutils.h  graphutils.icc  path.hh  path.icc  view.icc
ext/gecode-1.3.1/contribs/graph/branch/: branch.icc
ext/gecode-1.3.1/contribs/graph/examples/: cpgraph-basic.cc  cpgraph-complement.cc  cpgraph-instUB.cc  cpgraph-path.cc  cpgraph-path2.cc  cpgraph-pathcost.cc
ext/gecode-1.3.1/contribs/graph/path/: path.icc  pathdegree.icc  pathgraphs.icc
ext/gecode-1.3.1/contribs/graph/view/: arcnode.cc  arcnode.hh  boundsgraphs.icc  iter.icc  nodearcsets.icc  outadjsets.icc  prop.icc
ext/gecode-1.3.1/contribs/map/: COMPILING  LICENSE  Makefile.in.in  configure  configure.ac  constraints.hh  constraints.icc  doxygen.conf  doxygen.hh  map.hh  shortdesc.ac  var.icc
ext/gecode-1.3.1/contribs/map/examples/: approximateMatching.cc  graph-examples.tgz  isomorphism.cc  map  map.cc  subgraphmonomorphism.cc
ext/gecode-1.3.1/contribs/map/matching/: mono.hh  mono.icc
ext/gecode-1.3.1/contribs/map/var/: .imp.icc.swp  imp.cc  imp.icc
(+1181 files in other folders)
